--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,6 @@ footer{
   margin-top: auto;
   grid-area: footer;
   padding: 10px;
-  color:white;
+  color:black;
   background-color: #F5F5F5
 }
