--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,11 @@ body{
   padding: 0;
   margin: 0;
   display: grid;
-  grid-auto-rows: auto 50vh auto 10em;
+  grid-auto-rows: 100px 50vh auto 10em;
   grid-template-columns: 1fr 1fr 5fr 1fr;
   grid-template-areas:
   "header header header header"
-  "main main main aside"
+     "main main main aside"
   "footer footer footer footer";
   background-color:#264653;
   min-height: 100%
@@ -25,7 +25,8 @@ body{
 nav{
   display: grid;
   grid-template-rows: minmax(min-content, 100px) min-content;
-  padding-bottom: 50px
+  padding-bottom: 50px;
+  height: 100px
 }
 
 nav .content h1{
@@ -42,6 +43,8 @@ nav .content{
   place-items: center;
   grid-auto-flow: column;
   align-content: space-evenly;
+  grid-template-columns: 90% 10%;
+  padding-right: 50px
 }
 
 nav .content .links{
@@ -50,7 +53,6 @@ nav .content .links{
   grid-auto-flow: column;
   place-items: center;
   grid-auto-columns: minmax(min-content, 70px);
-
 }
 
 nav .content .links a{
@@ -78,12 +80,13 @@ nav .dropdown{
   display: none;
   background-color: #E9C46A;
   text-align: center;
+  margin-bottom: 100px
 }
 
 nav .dropdown a{
   color: black;
   padding: 40px;
-  text-decoration: none
+  text-decoration: none;
 }
 
 nav .dropdown a:hover{
@@ -104,7 +107,7 @@ header {
 
 main{
   grid-area: main;
-  padding: 10px;
+  padding-left: 50px;
   color:white;
 }
 
