--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body{
   padding: 0;
   margin: 0;
   display: grid;
-  grid-auto-rows: 100px 50vh auto 10em;
+  grid-auto-rows: 100px 88vh auto 10em;
   grid-template-columns: 1fr 1fr 1fr .2fr;
   grid-template-areas:
   "header header header header"
@@ -15,11 +15,6 @@ body{
   min-height: 100%;
 }
 
-.Avatar{
-  border-radius: 100px;
-  width:20%;
-  margin-left: 10px;
-}
 
 nav{
   display: grid;
@@ -48,6 +43,7 @@ nav .content{
   padding-right: 70px;
   font-family: 'Ubuntu', sans-serif;
   font-size: 20px;
+  z-index: 2;
 }
 
 nav .content .links{
@@ -57,6 +53,7 @@ nav .content .links{
   place-items: center;
   grid-auto-columns: minmax(min-content, 100px);
   font-family: 'Dancing Script', cursive;
+  padding-bottom: 10px;
 }
 
 nav .content .links a{
@@ -89,6 +86,7 @@ nav .dropdown{
   text-align: center;
   margin-bottom: 100px;
   font-family: 'Dancing Script', cursive;
+  z-index: 1;
 }
 
 nav .dropdown a{
@@ -135,7 +133,7 @@ footer{
 .Cover-Photo{
   background-position: center;
   width: auto;
-  height: 87vh;
+  height: auto;
   background-image: url('../Photos/RoloRunning.jpg');
   background-size: cover;
   background-repeat: none;
@@ -146,6 +144,14 @@ footer{
   text-shadow: 2px 1px 1px black;
   font-size: 50px;
   text-align: center;
-  margin-top: 50vh
+  margin-top: 50vh;
+  user-select: none;
+}
 
+.Socials{
+  padding: 25px;
+}
+
+.socials .instagram{
+  padding: 50px;
 }
