--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html{
 }
 
 .Cover-Photo{
-  background-image: url('../Photos/RoloRunning.jpg');
+  background-image: url('../Photos/Nature/RoloRunning.jpg');
   height:100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -99,15 +99,21 @@ html{
 }
 
 .img1{
-  background-image: url('../Photos/RoloRunning.jpg');
+  background-image: url('../Photos/Nature/RoloRunning.jpg');
+  filter: blur(12px);
+  -webkit-filter: blur(12px);
 }
 
 .img2{
   background-image: url('../Photos/IMG_5494.jpg');
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
 }
 
 .img3{
   background-image: url('../Photos/IMG_3633.jpg');
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
 }
 
 .bg-text{
@@ -127,6 +133,10 @@ html{
   text-align: center;
   font-family: 'Dancing Script', cursive;
   text-shadow: 1px 1px 1px black;
+}
+
+.bg-text h6{
+  font-family: 'Dancing Script', cursive;
 }
 
 body{
@@ -225,6 +235,35 @@ nav .dropdown a:hover{
   color: #E76F51;
   background-color: white;
 }
+
+.nav-dropdown{
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown-cnt{
+  display: none;
+  position: absolute;
+  background-color: #F5F5F5;
+  min-width: 160px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  z-index: 2;
+  bottom: auto;
+}
+
+.dropdown-cnt a{
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.nav-dropdown:hover .dropdown-cnt{
+  display:inherit;
+}
+
 
 @media only screen and (max-width:520px) {
   nav .content .menu{display: inline;}
@@ -332,11 +371,36 @@ footer{
   z-index: 3;
 }
 
+.photo-row{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.photo-column{
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.photo-column img{
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+  border-radius: 3px
+}
+
+.photo-column img:hover{
+  box-shadow: 1px 1px 5px black;
+  border-radius: 3px
+}
+
 @media screen and (max-width: 900px) {
   .column {width: 100%;}
   .inputs{font-size: 16px; width: 50%;}
   .message{font-size: 18px; width: 50%;}
   .submit-button{font-size: 16px; width: 50%;}
+  .photo-column{flex: 50%; max-width: 50%;}
 }
 
 @media screen and (max-width: 600px) {
@@ -344,4 +408,5 @@ footer{
   .inputs{font-size: 14px; width: 60%;}
   .message{font-size: 16px; width: 60%;}
   .submit-button{font-size: 14px; width: 60%;}
+  .photo-column{flex: 100%; max-width: 100%;}
 }
